--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
     <!-- TODO: Set the document title to the name of your application -->
     <title>UFH Tutor Application System</title>
     <meta name="description" content="Tutor application system for University of Fort Hare students" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="University of Fort Hare" />
 
-    <!-- TODO: Update og:title to match your application name -->
     <meta property="og:title" content="UFH Tutor Application System" />
     <meta property="og:description" content="Tutor application system for University of Fort Hare students" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
